# pledge

./: CHANGELOG.md  README.md  TODO.md  TODO.org  cabal.project  cabal.project.freeze  pledge.cabal
examples/basic/: Makefile  README.md  demo1  demo1.c
examples/haskell/app/: Main.hs
examples/haskell/effect/: Main.hs
examples/multipledge/: Main.hs
src/: Sequencing.hs
src/Data/Set/: Singletons.hs
src/System/OpenBSD/: MultiPledge.hs  MultiPledgeSkip.hs  Pledge.hs
src/System/OpenBSD/Pledge/: Internal.hs  Internal.hsc
src/System/OpenBSD/Pledge/Promise/: Type.hs
