cabal-version:      2.4
name:               pledge
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Björn Gohla
maintainer:         b.gohla@gmx.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable demo
    main-is: Main.hs
    build-depends: base >= 4 && < 5, pledge, containers
    ghc-options: -Wall
    hs-source-dirs: examples/haskell/app
    default-language: Haskell2010
                    
executable pledge
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
    build-tool-depends: hsc2hs:hsc2hs
    default-language: Haskell2010
    build-depends: base >= 4 && < 5, containers, mtl, transformers, template-haskell, effect-monad
    ghc-options: -Wall
    hs-source-dirs: src
    exposed-modules: System.OpenBSD.Pledge.Internal, System.OpenBSD.Pledge
    other-modules: 