cabal-version:      2.4
name:               pledge
version:            0.1.0.0
synopsis:           Type level API for OpenBSD pledge call
description:
  [`pledge(2)`](https://man.openbsd.org/pledge.2) is an OpenBSD system
  call that allows a user space process to reduce the set of available
  system calls. OpenBSD defines a set of capabilities called
  _promises_. The argument to the `pledge` call is a space separated
  string containing the names of the promises the process wishes to
  retain; any promise not mentioned is disabled. Importantly , once
  dropped , a promise can not be reinstated during the lifetime of the
  process , the set of promises can however be reduced in successive
  steps.
  The purpose of this mechanism is to reduce the potential for exploits.
  when using this API in C , one has to carefully analyze the system
  calls the program will need , to find the minimal required set of
  promises. Naturally , the compiler can not help in checking the
  minimality or sufficiency of the result.
  We present here a type level API in Haskell that can help automate
  this process. There are two steps to using it.

bug-reports:        https://github.com/cgohla/pledge/pulls
copyright:          Björn Gohla
author:             Björn Gohla
maintainer:         Björn Gohla <b.gohla@gmx.de>
stability:          experimental
license:            MIT
category:           Security, OpenBSD
extra-source-files:
  CHANGELOG.md
  examples/basic/demo1.c
  examples/basic/Makefile
  examples/basic/README.md
  README.md

source-repository head
  type:     git
  location: https://github.com/cgohla/pledge

executable effect
  main-is:          Main.hs
  build-depends:
    , base          >=4 && <5
    , directory
    , effect-monad
    , pledge
    , text

  ghc-options:      -Wall
  hs-source-dirs:   examples/haskell/effect
  default-language: Haskell2010

executable demo
  main-is:          Main.hs
  build-depends:
    , base        >=4 && <5
    , containers
    , pledge

  ghc-options:      -Wall
  hs-source-dirs:   examples/haskell/app
  default-language: Haskell2010

executable multipledge
  main-is:          Main.hs
  build-depends:
    , base        >=4 && <5
    , containers
    , directory
    , pledge
    , singletons
    , text

  ghc-options:      -Wall
  hs-source-dirs:   examples/multipledge
  default-language: Haskell2010

library
  build-tool-depends: hsc2hs:hsc2hs
  default-language:   Haskell2010
  build-depends:
    , base               >=4 && <5
    , containers
    , directory
    , effect-monad
    , mtl
    , singletons
    , singletons-base
    , singletons-th
    , template-haskell
    , text
    , transformers
    , transformers-base
    , type-level-sets
    , unliftio-core

  ghc-options:        -Wall
  hs-source-dirs:     src
  exposed-modules:
    Data.Set.Singletons
    System.OpenBSD.MultiPledge
    System.OpenBSD.Pledge
    System.OpenBSD.Pledge.Internal
    System.OpenBSD.Pledge.Promise.Type

  other-modules:
